<resources>
    <string name = "app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name = "video">Video</string>
    <string name = "music">Music</string>
    <string name = "discover">Discover</string>
    <string name = "me">Me</string>
    <string name = "history">History</string>
    <string name = "delete_icon">Delete Icon</string>
    <string name = "folder">Folder</string>
    <string name = "playlist">Playlist</string>
    <string name = "view_pager">View Pager</string>
    <string name = "tab_layout">Tab Layout</string>
    <string name = "my_coin">My coin</string>
    <string name = "exchange">Exchange</string>
    <string name = "transfer">File Transfer</string>
    <string name = "featured_theme">Featured Theme</string>
    <string name = "remove">Remove</string>
    <string name = "remove_ads">Remove ads</string>
<string name = "transfer_share">File Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toggle_grid_or_list_view">Toggle Grid or List View</string>
    <string name="image">Image</string>
    <string name="youtube_cover">Youtube Cover</string>
    <string name="date">Date</string>
    <string name="music_fragment">Music Fragment</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="image_icon">Image_Icon</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]>
    </string>

    <string name="settings">Settings</string>
    <!--<string name="folder_name">Folder Name</string>-->
    <string name="browser_edit">Browser Edit</string>
    <string name="bookmark">BookMark</string>
    <string name="favorite_videos">Favorite Videos</string>
    <string name="_3_files">3 files</string>
    <string name="video_list_show_by_sort">video list show by sort</string>
    <string name="shuffle_all_12">Shuffle all(12)</string>
    <string name="back_icon">back icon</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="play_button">Play Button</string>
   <!-- <string name="duration">00:00</string>
    <string name="total_videos">Total Videos</string>
   -->
    <string name="guide_1">To find and play all media files on your device,we nead the "All files access" permission on your device.</string>

    <!--<string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to World of Entertainment!!</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>-->
    //for menu
  <!--  <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>
-->
    <!--strings for video more features-->
   <!-- <string name="rename">Rename </string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply To All Upcoming Videos</string>
-->





    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to World of Entertainment!!</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
   <!-- <string name="image">Image</string>-->
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>
    //for menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply To All Upcoming Videos</string>
    <string name="commit">Commit</string>
    <string name="inst_delete">Do you want to delete the file from your phone permanently?</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="information">Information</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="format">Format</string>
    <string name="path">Path</string>
    <string name="duration_">Duration</string>
    <string name="date_">Date</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="replay">Replay</string>
    <string name="q_remove">Do you want to remove the file from the current playlist?</string>
    <string name="q_delete">Do you want to delete the original file?</string>
    <string name="timer">Timer</string>
    <string name="speed_play">Speed play</string>
    <string name="file_info">File Info</string>
    <string name="alarm_ringtone">Alarm ringtone</string>
    <string name="set_as">Set as</string>
    <string name="phone_ringtone">Phone ringtone</string>
    <string name="all">All</string>
    <string name="recently_played">Recently Played</string>
    <string name="favorite">Favorite</string>
    <string name="subtitle_dummy">All songs are collected in this playlist</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="network_guide">This function requires networking, please connect to the network</string>
    <string name="play">Play</string>
    <string name="game">Game</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="total_coins">Total coins</string>
    <string name="player_id">Player Id</string>
    <string name="email">Email</string>
    <string name="sd_inst">*Apple, Google, Paytm, Paypal, Pubg, Freefire and Amazon are not a sponsor nor are involved in any way in this contest/draw/app rewards. no apple products are being used as prizes.</string>
    <string name="inst3">*Your Redeem will be confirmed within 24 hrs.</string>
    <string name="privacy_policy_"><u>privacy policy</u></string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="equalizer">Equalizer</string>
    <string name="_60hz">60Hz</string>
    <string name="_230hz">230Hz</string>
    <string name="_910hz">910Hz</string>
    <string name="_3600hz">3600Hz</string>
    <string name="_14000hz">14000Hz</string>

</resources>