<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    xmlns:app = "http://schemas.android.com/apk/res-auto">
<data>

</data><androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    android:layout_margin = "10dp"
    tools:context = ".music.AllSongMusicFragment">

  <ImageView
      android:id = "@+id/iv_shuffle"
      android:layout_width = "50dp"
      android:layout_height = "50dp"
      android:src = "@drawable/play_button"
      android:padding = "10dp"
      app:layout_constraintTop_toTopOf = "parent"
      app:layout_constraintStart_toStartOf = "parent"
      android:contentDescription = "@string/image_icon" />
  <TextView
      android:id = "@+id/tvAllShuffle"
      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:text = "@string/shuffle_all_12"
      android:padding = "5dp"
      android:textSize = "16sp"
      android:textColor = "@color/black"
      app:layout_constraintTop_toTopOf = "parent"
      app:layout_constraintStart_toEndOf = "@id/iv_shuffle"
      app:layout_constraintBottom_toBottomOf = "@id/iv_shuffle"
      />
      <ImageView
          android:id = "@+id/sortBtn"
          android:layout_width = "50dp"
          android:layout_height = "50dp"
          android:src = "@drawable/sort"
          android:padding = "15dp"
          android:layout_weight = "1"
          android:contentDescription = "@string/video_list_show_by_sort"
          app:layout_constraintEnd_toEndOf = "parent"
          app:layout_constraintTop_toTopOf = "parent"
          />
  <androidx.recyclerview.widget.RecyclerView
      android:id = "@+id/audio_recycler"
      android:layout_width = "match_parent"
      android:layout_height = "wrap_content"
      tools:listitem = "@layout/item_audio_list"
      app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf = "@id/iv_shuffle"
      />


</androidx.constraintlayout.widget.ConstraintLayout></layout>