<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/x30">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sheet_color"
            android:orientation="vertical"
            android:padding="@dimen/x10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:textColor="@color/text_2"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />



                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x6"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/title"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/titleTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:text="title"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/reso_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/resolution"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/resoTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/artist_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/artist"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/artistTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/album_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/album"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/albumTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/size"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/sizeTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/format"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/formatTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/path"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/pathTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/duration_"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/durationTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x10"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="@string/date_"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/dateTv"
                        android:layout_width="@dimen/x0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/x6"
                        android:textColor="@color/text_1"
                        android:textSize="@dimen/sp14"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/neg_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/x6"
                    android:textColor="@color/text_2"
                    android:layout_gravity="end"
                    android:padding="@dimen/x6"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:text="@string/close"
                    tools:ignore="RtlSymmetry" />



            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>